<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/search_button"
        android:title="@string/search_string"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:orderInCategory="1"
        android:icon="@drawable/ic_search"
        app:showAsAction="always|collapseActionView"/>

    <item
        android:id="@+id/filter_button"
        android:icon="@drawable/ic_filter"
        android:title="@string/filter_string"
        android:orderInCategory="2"/>

    <item
        android:id="@+id/sort_button"
        android:icon="@drawable/sort_item"
        android:title="@string/sort_string"
        android:orderInCategory="3"/>






</menu>