<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="154dp"
    android:background="@color/colorPrimary"
    android:padding="14dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    android:orientation="horizontal"
    android:gravity="bottom">

    <ImageView
        android:layout_width="@dimen/thumbnail_size"
        android:layout_height="@dimen/thumbnail_size"
        android:layout_marginEnd="@dimen/list_padding"
        android:src="@drawable/ic_unesco_logo"
        android:tint="@color/menu_item"
        android:contentDescription="@string/unesco_logo_string"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/unesco_nav_string"
            android:includeFontPadding="false"
            android:textSize="32sp"
            android:textColor="@color/menu_item"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tracker_nav_string"
            android:includeFontPadding="false"
            android:layout_marginTop="-8dp"
            android:gravity="end"
            android:textSize="18sp"
            android:textColor="@color/menu_item"/>

    </LinearLayout>



</LinearLayout>